flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: thrisha24/voteapp:4
        ports:
        - containerPort: 80
        env:
        - name: MONGO_URI
          value: "mongodb://somu:VGVzdEAyMDI0Cg==@mongo-service:27017/"  # Change as needed
