flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-09-26T22:52:05Z"
  name: flask-service
  namespace: vote-app
  resourceVersion: "341547680"
  uid: 7b108ef5-0f58-4a4a-a823-edbcd219d081
spec:
  clusterIP: 10.245.30.169
  clusterIPs:
  - 10.245.30.169
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: flask-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
